# playground

./: .gitignore  books-to-read  index
bash/: debug.sh  quote_string.md
car_db/: to_sqlite.py  xcars.py
cpp/: .gitignore  fix_cc.py  latest
cpp/buffers20/: .clang-format  .clang-tidy  CMakeLists.txt  build.sh  pre-commit.sh
cpp/buffers20/cmake/: BuildTypeGuard.cmake  CCache.cmake  CXXFlags.cmake  CodeCoverage.cmake  Coverage.cmake  Linters.cmake  Sanitizers.cmake  Valgrind.cmake
cpp/buffers20/src/: CMakeLists.txt  buffers.cpp
cpp/buffers20/src/include/: buffers.hpp
cpp/buffers20/tests/: CMakeLists.txt  test_buffers.cpp
cpp/clang-tidy/: 0001-clang-tidy-Add-Stroustrup_style-nameing-support.patch  clang-tidy-stroustrup-style.diff
cpp/cpp-scaffolding/: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  .travis.yml  CMakeLists.txt  README.md  b  c  conanfile.txt  shell.nix
cpp/cpp-scaffolding/cmake/: CompilerOptions.cmake  CompilerWarnings.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
cpp/cpp-scaffolding/fuzzer/: CMakeLists.txt  fuzzer.cpp
cpp/cpp-scaffolding/src/: CMakeLists.txt  main.cpp
cpp/duffs_device/: .ycm_extra_conf.py  duffs_device.cpp  duffs_device_co.cpp
cpp/explicit_inst/: arg.cpp  arg.hpp  main.cpp  mock_arg.cpp  mock_arg.hpp  sut.cpp  sut.hpp
cpp/faster_compile/: address  main.cpp  static-vector.hpp
cpp/libmx/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  version.h.in
cpp/libmx/cmake/: flags.cmake
cpp/libmx/src/: CMakeLists.txt  algo.hpp  bits.hpp  mx.cpp  mx.hpp
cpp/libmx/tests/: CMakeLists.txt  mx_test.cpp
cpp/llvm-interp/: interp.cpp
cpp/ms/: a.cpp  atomic.cpp  b.cpp  messages.cpp
cpp/msan/: build_llvm.sh  build_llvm_gcc.sh  msan.sh  test.cc
cpp/opencv/: .clang-format  .clang-tidy  CMakeLists.txt  conanfile.txt
cpp/opencv/src/: CMakeLists.txt  Capture.cpp  DisplayImage.cpp  HelloWorld.cpp  ImageWatch.cpp  TrackBar.cpp
cpp/singleton/: CMakeLists.txt  fib.hpp  logger.cpp  logger.hpp  main.cpp  test_fib.cpp  test_logger.cpp
cpp/snippets/: aa.shared_ptr.cpp  carl.cook.cpp  cpp17_book.md  disable_dtor_by_anonymous_union.cpp  error_handling.cpp  invoke_for_pair_second.cpp  is_class_or_union.cpp  meta-bench.cpp  sean.parent_task_system_v1.cpp  sean.parent_task_system_v2.cpp  sean.parent_task_system_v3.cpp  template.primer.cpp  throw_polymorphically.cpp  value_type_of.cpp  variadic_templates.cpp
cpp/spirit/: CMakeLists.txt  flake.nix
cpp/try/: .clang-format  .clang-tidy  CMakeLists.txt  Dockerfile  conanfile.txt
cpp/try/src/: CMakeLists.txt
cpp/try/src/libuv/: main.cpp
cpp/try/src/uvw/: main.cpp
cpp/try/src/uwebsockets/: backpressure.cpp  basic_server.cpp  basic_server_threaded.cpp  echo_websocket_server.cpp  echo_websocket_server_broadcasting.cpp  echo_websocket_server_threaded.cpp
cpp/try/test/: CMakeLists.txt  test_catch2.cpp  test_fmt.cpp
cpp/try_gtest/: .clang-tidy  CMakeLists.txt  build.sh  conanfile.txt  tests.cpp  ubsan.supp
cpp/tuning/: .gitignore  CMakeLists.txt  align.cpp  build.sh  cache.cpp  cache_line.cpp  cache_size.cpp  cmp_bm.py  crazy_world.cpp  data_or.cpp  denormal.cpp  denormal.sh  exception.cpp  false_sharing.cpp  false_sharing_stand_along.cpp  inst_par.cpp  lexing.cpp  malloc.cpp  matrix.cpp  mod.cpp  move_iterator.cpp  mx.hpp  n-set.cpp  pair_emplace.cpp  pass_param.cpp  pass_to_vector_push.cpp  pow.cpp  prediction.cpp  prefetch.cpp  sso.cpp  step.cpp  virtual.cpp
cpp/tuning/cmake/: CXXFlags.cmake  Conan.cmake  First.cmake  Sanitizers.cmake
cpp/tuning/vec_perf/: find_perf.cpp  vec.cpp  vec_perf_benchmark.cpp
dive-into-pytorch/: a.py  b.py  c.py  d.py  e.py  f.py  housing.py  main.py  tutorial4.py
dl/: .gitignore  cat_dog_v1.py  cat_dog_v2.py  mask_v1.py  mask_v2.py  mask_v3.py  mobilenet_v1.py  plt_show.py  plt_subplot.py  read_yuv.py  saved_model_to_frozen.py  side_effects.py  sign-lang.py
dockers/clion-remote/: Dockerfile  hosts  sources.list
dockers/gcc/: Dockerfile  docker.txt
dockers/gitlab/: docker.txt
dockers/mysql/: docker.txt
dockers/redis/: docker.txt
flask/market/: __init__.py  forms.py  market.db  models.py  routes.py
flex-bison/: .gitignore  Makefile  in.snazzle  snazzle.l  snazzle.y  test.l  test.y
flex-bison/calc/: calc++.cc  calc.l  driver.cc  driver.hh  parser.yy
golang/chat/: go.mod  main.go
golang/db_mock/: go.mod  main.go  main_test.go
golang/hello/: go.mod  hello.go
golang/rot13reader/: main.go
golang/the.one/: HSTS  go.mod
golang/torv/: README.md  go.mod  go.sum
golang/try_conn/: pipe.go
golang/try_context/: go.mod
golang/try_graceful/: main.go
golang/try_redis/: go.mod  go.sum  main.go
haskell/: data-list.hs  flake.nix  haskell-tut.hs
haskell/hs-tmp/: CHANGELOG.md  hs-tmp.cabal  monitor-test.sh  shell.nix
haskell/hs-tmp/src/: DataList.hs  DataMap.hs  HsPrelude.hs
haskell/hs-tmp/tests/: LearnYouGoodTest.hs  Test.hs  doctests.hs
java/impatient_java/: Hello.java
llvm/: .gitignore
llvm/danilafe/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  b  conanfile.txt  flake.nix
llvm/danilafe/conan/: clang-10-ASanAndUBSan  clang-10-Debug  gcc-9-ASanAndUBSan
llvm/danilafe/src/lib/: CMakeLists.txt  scanner.cpp  scanner.hpp  scanner_test.cpp
llvm/decl/: main1.cpp  main2.cpp  main3.cpp
llvm/kaleidascope/: Makefile  toy.cpp  toy2.cpp
llvm/llvm_essentials/: .clang-tidy  .ycm_extra_conf.py  Makefile  toy.cpp  toy1.cpp  toy2.cpp  toy3.cpp  toy4.cpp  toy5.cpp
llvm/my_toy_compiler/: .clang-tidy  .gitignore  Makefile  codegen.cpp  codegen.h  corefn.cpp  main.cpp  node.h
llvm/sym/: main.cpp  main1.cpp  main2.cpp
nix/: shell.nix  vim.nix  vimrc
nix/db/: dev.nix  haskell.nix
nix/llvm-dbg/: cpp-shell.nix  hello.nix  llvm-shell.nix
nix/managing_libraries_with_nix/: a.cpp  catch2.nix  default.nix
notes/: quote.md
rabbitmq/: hello_receive.py  hello_send.py  publish_subscribe_receive.py  publish_subscribe_send.py  queue_receive.py  queue_send.py  routing_receive.py  routing_send.py  srv
(+192 files in other folders)
