cabal-version:      2.4
name:               hs-tmp
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Mo Xiaoming
maintainer:         2188767+mo-xiaoming@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library mylib
    exposed-modules:  HsPrelude DataList DataMap

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall

executable app
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends: base ^>=4.14.3.0, mylib

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall

test-suite ut
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tests
    main-is:          Test.hs
    other-modules:    LearnYouGoodTest
    build-depends:    base ^>=4.14.3.0, HUnit, mylib
    ghc-options:      -Wall

test-suite doctests
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    ghc-options:      -threaded -Wall
    main-is:          doctests.hs
    hs-source-dirs:   tests
    build-depends:    base ^>=4.14.3.0, doctest
